Bug 130363 - FILESAVE DOCX character padded border highlight fill incomplete at end-of-line
Summary: FILESAVE DOCX character padded border highlight fill incomplete at end-of-line
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4 all versions
Hardware: All All
: medium trivial
Assignee: Justin L
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Character
  Show dependency treegraph
 
Reported: 2020-02-02 13:17 UTC by David Nolan
Modified: 2023-05-13 04:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing incompletely filled padded border with highlight colour. (54.20 KB, image/jpeg)
2020-02-02 13:23 UTC, David Nolan
Details
Test .docx file with incompletely filled padded border with highlight colour. (4.15 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-02-02 13:24 UTC, David Nolan
Details
Test .odt file with completely filled padded border with highlight colour. (8.74 KB, application/vnd.oasis.opendocument.text)
2020-02-02 13:26 UTC, David Nolan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Nolan 2020-02-02 13:17:27 UTC
Description:
If I save a document as .docx (Word 2007-365) then re-open it: the highlighting on characters with a padded border at the end of a line is incomplete (doesn't completely fill inside the border box at the right-most edge), a visible white space inside the border remains permanently.

Steps to Reproduce:
1. Create a New document
2. Type a word
3. Select the word and open the Character dialog (Format->Character...)
4. Select the Borders tab
5. Change the value in Padding to something greater than 0 (e.g. 10 pt)
6. Set All Four Borders
7. Select the Highlighting tab
8. Pick a Colour
9. Select OK to close the dialog
10. Save As... .docx (Word 2007-365)
11. Re-open file in Writer

Actual Results:
Incompletely colour-filled padded border box around characters at the end of a line.

Expected Results:
Completely colour-filled padded border box around characters at the end of a line.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.4.0.3 (x64)
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-GB
Calc: threaded
Comment 1 David Nolan 2020-02-02 13:23:46 UTC
Created attachment 157598 [details]
Screenshot showing incompletely filled padded border with highlight colour.
Comment 2 David Nolan 2020-02-02 13:24:57 UTC
Created attachment 157599 [details]
Test .docx file with incompletely filled padded border with highlight colour.
Comment 3 David Nolan 2020-02-02 13:26:48 UTC
Created attachment 157600 [details]
Test .odt file with completely filled padded border with highlight colour.
Comment 4 Dieter 2020-02-03 19:58:37 UTC
I confirm it with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: eeb2d19e77d6dc47c68e8ba0920a02cf64a1247b
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded

and with

Version: 6.3.4.2 (x64)
Build-ID: 60da17e045e08f1793c57c00ba83cdfce946d0aa
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 5 Justin L 2022-06-24 18:18:05 UTC
repro 7.5+
Must be a layout issue I assume.
Comment 6 David Nolan 2022-06-24 18:23:23 UTC
Issue can also occur whilst editing a file saved as an odt.
Once problem starts, however, the only solution is to reload the file.
Comment 7 Justin L 2023-05-12 15:01:49 UTC
broken in LO 5.4 with commit 4a410dd147f7160c1d62e3e0b67388a178d5136c
Author: Vitaliy Anderson on Fri Dec 9 02:48:00 2016 -0500
    tdf#104349 remove the difference between MSO and LO highlight chars
Comment 8 Commit Notification 2023-05-13 00:19:21 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/06824845cc0a1b48d87554091bcac5aad8d60b4a

NFC tdf#130363 sw layout: cleanup MS Word compatibility trailing blanks

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-05-13 00:22:24 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5a22fceed57f05eb43a5fb0817afbc141610c5e

tdf#130363 sw layout: MS Word compatibility trailing blanks option part 4

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 BogdanB 2023-05-13 04:17:40 UTC
It's completely filled now.
Thanks, Justin.

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: b5a22fceed57f05eb43a5fb0817afbc141610c5e
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded