tdf#130363 sw layout: MS Word compatibility trailing blanks option part 4

There are also margins to be considered.
Granted, the previous approach DID seem to get the right width,
since MS Word doesn't paint the left border spacing either.

However, since the existing situation doesn't cover that case,
just remove the excess amount.

Although not perfect (and this whole thing is a total hack,
so perfection can hardly be expected)
it is better than before.

Change-Id: I9dd1e801d8fe0000de020d59c7463138e2ad9f6f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151716
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>